# slew

./: .gitignore  .gitmodules  CHANGELOG.md  Dockerfile  LICENSE  README.org  REFACTORING_SUMMARY.md  TESTING.md  TODO.org  build.sh  devenv.nix  slew.cabal  test.json
.github/workflows/: haskell.yml  release-static.yaml
app/: Main.hs
app/Logic/: EventHandlers.hs  JobFiltering.hs
app/Model/: AllocatedNode.hs  AppState.hs  Job.hs  JobResources.hs  Options.hs  SControl.hs  SQueue.hs  SlurmCommand.hs  TimingState.hs  ViewState.hs
app/SQueue/: Command.hs  Poller.hs
app/Slurm/: Channel.hs  Parser.hs
app/Tail/: Poller.hs  TailFile.hs
app/Types/: SlurmAPI.hs
app/UI/: Echo.hs  Event.hs  JobList.hs  JobPanel.hs  Menus.hs  Poller.hs  SControl.hs  SlurmCommand.hs  Themes.hs  TimingState.hs  Transient.hs  View.hs  ViewState.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
test/Logic/: EventHandlersSpec.hs  JobFilteringSpec.hs
