cabal-version:   3.14
name:            slew
version:         0.8.0.0
license:         BSD-3-Clause
license-file:    LICENSE
maintainer:      jakefaulkn@gmail.com
author:          Jake Faulkner
synopsis:        Slurm TUI
description:     Slew, slurm for the rest of us.
category:        System, Terminal, Utils
build-type:      Simple
extra-doc-files: CHANGELOG.md

source-repository this
    type:     git
    location: https://github.com/lispandfound/slew
    tag:      v0.8.0

source-repository head
    type:     git
    location: https://github.com/lispandfound/slew

executable slew
    main-is:            Main.hs
    hs-source-dirs:     app
    other-modules:
        Model.SQueue
        Model.Job
        UI.Transient
        Model.AppState
        Model.ViewState
        Model.TimingState
        UI.View
        UI.Event
        UI.Menus
        Slurm.Channel
        UI.Poller
        UI.JobPanel
        UI.JobList
        Model.SlurmCommand
        UI.SlurmCommand
        UI.Echo
        UI.Themes
        Model.Options

    default-language:   GHC2024
    default-extensions:
        OverloadedStrings NoFieldSelectors DuplicateRecordFields
        OverloadedRecordDot OverloadedLabels

    ghc-options:        -threaded -rtsopts "-with-rtsopts=-N -T" -Wall
    build-depends:
        base >=4.21.0 && <4.22,
        relude >=1.2.2 && <1.3,
        aeson >=2.2.3 && <2.3,
        aeson-casing >=0.2.0 && <0.3,
        async >=2.2.5 && <2.3,
        brick >=2.10 && <2.11,
        brick-tabular-list >=2.2.0 && <2.3,
        bytestring >=0.12.2 && <0.13,
        filepath >=1.5.4 && <1.6,
        fmt >=0.6.3 && <0.7,
        hinotify >=0.4.2 && <0.5,
        linear >=1.23.2 && <1.24,
        mtl >=2.3.1 && <2.4,
        optics-core >=0.4.1 && <0.5,
        optics-extra >=0.4.2 && <0.5,
        optparse-applicative >=0.19.0 && <0.20,
        process >=1.6.25 && <1.7,
        rosezipper >=0.2 && <0.3,
        stm >=2.5.3 && <2.6,
        text >=2.1.2 && <2.2,
        text-zipper >=0.13 && <0.14,
        time >=1.14 && <1.15,
        vector >=0.13.2 && <0.14,
        vty >=6.5 && <6.6,
        vty-crossplatform >=0.5.0 && <0.6

    mixins:
        base hiding (Prelude),
        relude (Relude as Prelude),
        relude
